--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -20,7 +20,8 @@
     /* Specify the base directory to resolve non-relative module names. */
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["src/*"]
+      "@src/*": ["src/*"],
+      "@controllers/*": ["src/controllers/*"]
     },
 
     /* JavaScript Support */
