--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
+    "@types/pino": "^7.0.5",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "concurrently": "^8.2.2",
@@ -42,6 +43,7 @@
   "dependencies": {
     "dotenv-safe": "^9.1.0",
     "morgan": "^1.10.0",
+    "pino": "^8.19.0",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.0"
   }
