--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
     "@types/pino": "^7.0.5",
@@ -42,6 +43,7 @@
   },
   "dependencies": {
     "dotenv-safe": "^9.1.0",
+    "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "pino": "^8.19.0",
     "swagger-ui-express": "^5.0.0",
