--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "swagger": "tsoa spec"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
@@ -42,6 +43,7 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv-safe": "^9.1.0",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
