--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
@@ -47,6 +48,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv-safe": "^9.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "pino": "^8.19.0",
