--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "@types/pino": "^7.0.5",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
@@ -51,6 +53,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pino": "^8.19.0",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.0"
