--- a/server/package.json
+++ b/server/package.json
@@ -56,6 +56,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pino": "^8.19.0",
+    "pino-pretty": "^11.0.0",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.0"
   }
